ajout du front de la page d'acceuile, about, event, et contact

--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-"Hello, EventQuest!" 
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EventQuest - Trouve ton événement</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- Header Section -->
+    <header>
+      <div class="container navbar">
+        <div class="logo-title">
+          <img
+            class="logo"
+            src="/images/logo.png"
+            href="index.html"
+            width="3%"
+            height="3%"
+          />
+          <a class="navbar-brand" href="index.html">EventQuest</a>
+        </div>
+        <ul class="navbar-nav">
+          <li><a href="about/about.html">À propos</a></li>
+          <li><a href="events/event-details.html">Événements</a></li>
+          <li><a href="contact/contact.html">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Hero Section -->
+      <div class="jumbotron">
+        <h1>Bienvenue sur EventQuest</h1>
+        <p>Découvrez les meilleurs événements près de chez vous</p>
+        <a href="events/event-details.html" class="btn-primary"
+          >Voir les événements</a
+        >
+      </div>
+    </header>
+
+    <!-- Events Section -->
+    <section class="container">
+      <div class="cards">
+        <!-- Event Card -->
+        <div class="card">
+          <img src="images/event1.jpg" alt="Event 1" />
+          <div class="card-body">
+            <h5 class="card-title">Nom de l'événement</h5>
+            <p class="card-text">Description courte de l'événement.</p>
+            <a href="events/event-details.html" class="btn-primary"
+              >En savoir plus</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/event1.jpg" alt="Event 1" />
+          <div class="card-body">
+            <h5 class="card-title">Nom de l'événement</h5>
+            <p class="card-text">Description courte de l'événement.</p>
+            <a href="events/event-details.html" class="btn-primary"
+              >En savoir plus</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/event1.jpg" alt="Event 1" />
+          <div class="card-body">
+            <h5 class="card-title">Nom de l'événement</h5>
+            <p class="card-text">Description courte de l'événement.</p>
+            <a href="events/event-details.html" class="btn-primary"
+              >En savoir plus</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/event1.jpg" alt="Event 1" />
+          <div class="card-body">
+            <h5 class="card-title">Nom de l'événement</h5>
+            <p class="card-text">Description courte de l'événement.</p>
+            <a href="events/event-details.html" class="btn-primary"
+              >En savoir plus</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/event1.jpg" alt="Event 1" />
+          <div class="card-body">
+            <h5 class="card-title">Nom de l'événement</h5>
+            <p class="card-text">Description courte de l'événement.</p>
+            <a href="events/event-details.html" class="btn-primary"
+              >En savoir plus</a
+            >
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/event1.jpg" alt="Event 1" />
+          <div class="card-body">
+            <h5 class="card-title">Nom de l'événement</h5>
+            <p class="card-text">Description courte de l'événement.</p>
+            <a href="events/event-details.html" class="btn-primary"
+              >En savoir plus</a
+            >
+          </div>
+        </div>
+        <!-- Répéter pour d'autres événements -->
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2024 EventQuest. Tous droits réservés.</p>
+    </footer>
+  </body>
+</html>
